--- a/lab02/yoo-bio.html
+++ b/lab02/yoo-bio.html
@@ -11,13 +11,18 @@
 
         Hyejun Yoo is an Advertising and Information Management & Technology major interested in <br>learning about how data analytics affect market research and consumer behaviors.<br>
         
-        Recently she has participated in various programs such as the <strong>4A’s MAIP 2021 Fellowship</strong>.<br>She was able to partake in a remote internship in which she worked with campaign analytics of <br>various clients while establishing a relationship with the agency she interned at.
+        Recently she has participated in various programs such as the <strong>4A’s MAIP 2021 Fellowship</strong>.<br>
+        She was able to partake in a remote internship in which she worked with campaign analytics of <br>
+        various clients while establishing a relationship with the agency she interned at.
 
         </p>
 
         <h2>Personal Information</h2>
         <p>
-        When Hyejun is not on campus for her courses or her work shifts, <br>she is a big movie person and she enjoys listening to music, hanging out with her friends, <br>and going to concerts and events around town. <br>She tries to have a fun word of the week every week and she also loves curating collectible items.
+        When Hyejun is not on campus for her courses or her work shifts, <br>
+        she is a big movie person and she enjoys listening to music, hanging out with her friends, 
+        <br>and going to concerts and events around town. <br>
+        She tries to have a fun word of the week every week and she also loves curating collectible items.
         </p>
 
         <h3>Hyejun's Skills</h3>
