--- a/lab02/yoo-bio.html
+++ b/lab02/yoo-bio.html
@@ -20,8 +20,7 @@
 
         <h2>Personal Information</h2>
         <p>
-        When Hyejun is not on campus for her courses or her work shifts, she enjoys watching movies, <br>listening to music, hanging out with her friends, 
-        <br>and going to concerts and events around town. <br>
+        When Hyejun is not on campus for her courses or her work shifts, she enjoys watching movies, <br>listening to music, hanging out with her friends, and going to concerts and events around town. <br>
         She tries to have a fun word of the week every week and she also loves curating collectible items.
         </p>
 
