--- a/lab02/yoo-bio.html
+++ b/lab02/yoo-bio.html
@@ -4,8 +4,8 @@
 
         <head>
             <meta charset="utf-8">
+            <title><h1>Hyejun Yoo's Biography</h1></title>
         </head>
-        <h1>Hyejun Yoo's Biography</h1>
         <body>
         <p>
 
