--- a/lab02/yoo-bio.html
+++ b/lab02/yoo-bio.html
@@ -4,7 +4,9 @@
 
         <head>
             <meta charset="utf-8">
-            <title><h1>Hyejun Yoo's Biography</h1></title>
+            <title>
+                <h1>Hyejun Yoo's Biography</h1>
+            </title>
         </head>
         <body>
         <p>
