--- a/lab02/yoo-bio.html
+++ b/lab02/yoo-bio.html
@@ -5,10 +5,12 @@
         <head>
             <meta charset="utf-8">
             <title>
-                <h1>Hyejun Yoo's Biography</h1>
+           Hyejun Yoo - Bio 
             </title>
         </head>
         <body>
+            <h1>Hyejun Yoo's Biography</h1>
+
         <p>
 
         Hyejun Yoo is an Advertising and Information Management & Technology major interested in <br>learning about how data analytics affect market research and consumer behaviors.<br>
