--- a/lab05/yoo-bio.html
+++ b/lab05/yoo-bio.html
@@ -35,6 +35,10 @@
             <li>Knowledge in Python, SQL, R</li>
         </ul>
 
+        <p>
+            <img src="../images/bio-pic" alt="Bio pic">
+        </p>
+
         <hr>
         &#64; 2020
         </body>
